# jungle-outreach-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.worker  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  instrumentation.ts  package-lock.json  package.json  pyproject.toml  pytest.ini  runner.py  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/: pull_request_template.md
app/: globals.css  layout.tsx  page.tsx
components/: app-shell.tsx  business-profile-form.tsx  campaigns-manager.tsx  draft-workspace.tsx  manual-run-form.tsx  message-approve-button.tsx  page-header.tsx  prospect-import-card.tsx  prospects-table.tsx  research-review.tsx  run-artifact-actions.tsx  run-cancel-button.tsx  settings-form.tsx  suppression-import-card.tsx
config/: scoring.yaml  settings.yaml  sources.yaml
docs/: architecture.md  campaign-configuration.md  examples.md  junglegrid-dogfooding.md  local-development.md  migration.md  outreach-agent-research.md  outreach-agent-setup.md  plan.md  prospect-pipeline-upgrade-plan.md  releasing.md  safety.md  source-adapters.md  worker-image.md  zeptomail-implementation-notes.md  zeptomail-setup.md
examples/: sample-local-services-input.json  sample-prospects.json  sample-worker-input.json
jungle_grid_leads/: __init__.py
prompts/: classifier.md  classify_lead.md  collector.md  draft_outreach.md  drafter.md  score_lead.md  scorer.md
scripts/: build-worker-image.sh  push-worker-image.sh  setup.sh  test-worker-local.sh
src/: __init__.py  (+15 more)
(+168 files in other folders)
