[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openline"
version = "0.1.0"
description = "Open-source, self-hostable prospect intelligence and outreach research powered by Jungle Grid"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.1",
]

[project.scripts]
jungle-grid-leads = "jungle_grid_leads.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
